--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -91,11 +91,13 @@ main {
       margin-bottom: 0;
     }
     .align-right {
-      margin: 0 0 10px 20px;
-    }
-    img {
       max-width: 33%;
       height: auto;
+      margin: 0 0 10px 20px;
+      img {
+        height: 100%;
+        width: 100%;
+      }
       @media (min-width: $desktop-start) {
         max-width: 300px;
       }
